welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:11: error: 'while' expected but 'if' found.
	if (nbBiscuits >= 3) {
        ^Poucet:14: error: '(' expected but ';' found.
	if (nbBiscuits <= 2) {
^